Defined entry point, controller, routes
